# bgfx_in_qt5

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_NAVIGATOR.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conanfile.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: README.md
assets/benchmarks/terrain/usgs_3dep/: manifest.json
docs/: architecture.md  architecture_constraints.md  bgfx_41_tess_analysis.md
docs/code_nav/: README.md  TEMPLATE_FEATURE_NAV.md  TEMPLATE_LOCAL_NAV.md
docs/code_nav/engine_render_core/: CODE_NAV.md
docs/code_nav/references/: quality_checklist.md
docs/code_nav/terrain_qt_offscreen/: CODE_NAV.md
examples/: CMakeLists.txt
examples/qt_widget_offscreen/: CMakeLists.txt  CODE_NAV.md  benchmark_runner.cpp  benchmark_runner.h  demo_controller.cpp  demo_controller.h  main.cpp
examples/qt_widget_offscreen/qml/: Main.qml
examples/terrain_headless_benchmark/: CMakeLists.txt  main.cpp
scripts/: fetch_usgs_3dep_assets.py
src/engine/: CMakeLists.txt  CODE_NAV.md
src/engine/common/: bgfx_utils.cpp  bgfx_utils.h  logger.h
src/engine/quick/: CODE_NAV.md  terrain_asset_service.cpp  terrain_asset_service.h  terrain_hash_utils.h  terrain_scene.cpp  terrain_scene.h  terrain_viewport_item.cpp  terrain_viewport_item.h
src/engine/render/: CODE_NAV.md
src/engine/render/core/: render_device_bgfx.cpp  render_device_bgfx.h
src/engine/render/features/terrain/: terrain_render_feature.cpp  terrain_render_feature.h
src/engine/render/pipeline/: render_feature.h  render_graph.cpp  render_graph.h  render_pipeline.cpp  render_pipeline.h
src/engine/render/scene/: orbit_camera_controller.cpp  orbit_camera_controller.h  render_proxy.h  render_scene_packet.h  view_input.h
src/engine/render/terrain/: terrain_constants.h  terrain_height_field_loader.cpp  terrain_height_field_loader.h  terrain_heightmap_decoder.cpp  terrain_heightmap_decoder.h  terrain_patch_tables.cpp  terrain_render_pipeline.cpp  terrain_render_pipeline.h  terrain_uniform_set.cpp  terrain_uniform_set.h
src/engine/shaders/: cs_rect_max_height.sc  fs_rect_wire.sc  fs_terrain_render.sc  varying.def.sc  vs_color.sc  vs_rect_wire.sc  vs_terrain_render.sc
tests/: CMakeLists.txt  architecture_boundary_tests.cpp  orbit_camera_controller_tests.cpp  render_graph_tests.cpp  render_scene_packet_tests.cpp  terrain_heightmap_decoder_tests.cpp
